v5.2.2
- Updated - Gutenberg remove from theme activation check - WP does that automatically until 5.9 for FSE themes
- Updated - Pattern to use spacing attributes instead of BootStrap's classes
- Updated - Reduce WooCoomerce starter support to minimum / eventually all support extensions will be moved to own plugin
- Updated - Duotone support transparency
- Removed - Widgets - sidebar registration
- Removed - Comment Walker in favor of Gutenberg block
- Removed - comments.php
- Added - Gutenberg Flex layout support
- Added - Gutenberg Comment Template/Form blocks
- Added - Site logo block wrapper (move custom logo filter to it and added styles)

v5.2.1
- Updated - Gubenberg Editor columns grid highlight: add top/bottom border for better visuals and remove padding bottom
- Fix - A but with Gutenberg Styles extension not adding clientId when block is added

v5.2.0
- Fixed - Double textdomain

v5.1.9
- Updated - Gubenberg Style extension to remove styles for all core blocks
- Updated - Add missing menu items attributes
- Updated - Button styles with block-gap support and proper BEM ussage / added button blocks to inline style removal
- Fixed - inline style removal for columns/column/group to avoid removing for child elements (fixes issue where you need to have inline style)
- Fixed - CSS dropcap for paragraph
- Fixed - WPSEO template name for author box
- Fixed - Issue with navigation link not adding active class when on Blog page
- Fixed - Post Author block duotone and show avatar if set (or icon if not)
- Fixed - A bug with Gutenberg Block Styles extension causing FSE screen to crash when viewving templates

v5.1.8
- Removed - Gutenberg 'block-templates' support declaration - is added by default for block based themes
- Removed - Base input styles - we use Bootstrap so let's stick to that
- Updated - Comment Walker and template - prepare block-views structure for upcomming comments query
- Updated - Post meta block-views structure changed