@@ -25,7 +25,7 @@
                     <!-- /wp:column -->
                 </div>
                 <!-- /wp:columns -->
-                <!-- wp:post-author {"className":"py-4 mb-5 border-top border-bottom","showAvatar":true,"showBio":true} /-->
+                <!-- wp:post-author {"className":"p-3 p-lg-4 mb-5 bg-light rounded","showAvatar":true,"showBio":true} /-->
                 <!-- wp:comments-query-loop {"queryPerPage":10} -->
                 <div class="wp-block-comments-query-loop">
                     <!-- wp:comment-template -->
