@@ -16,3 +16,6 @@ $variable-prefix: wp-- !default;
 // Typography
 $link-decoration: none!default;
 $headings-margin-bottom: 1.5rem;
+
+$enable-grid-classes: true;
+$enable-cssgrid: true;
